import and update to 5.0.5

--- a/assets/5.0.5/redis.conf
+++ b/assets/5.0.5/redis.conf
@@ -59,7 +59,7 @@
 # internet, binding to all the interfaces is dangerous and will expose the
 # instance to everybody on the internet. So by default we uncomment the
 # following bind directive, that will force Redis to listen only into
-# the IPv4 lookback interface address (this means Redis will be able to
+# the IPv4 loopback interface address (this means Redis will be able to
 # accept connections only from clients running into the same computer it
 # is running).
 #
@@ -85,11 +85,11 @@ bind 127.0.0.1
 # you are sure you want clients from other hosts to connect to Redis
 # even if no authentication is configured, nor a specific set of interfaces
 # are explicitly listed using the "bind" directive.
-protected-mode {{REDIS_PROTECTED_MODE}}
+protected-mode yes
 
 # Accept connections on the specified port, default is 6379 (IANA #815344).
 # If port 0 is specified Redis will not listen on a TCP socket.
-port {{REDIS_PORT}}
+port 6379
 
 # TCP listen() backlog.
 #
@@ -130,9 +130,6 @@ timeout 0
 tcp-keepalive 300
 
 ################################# GENERAL #####################################
-# By default Redis does not run as a daemon. Use 'yes' if you need it.
-# Note that Redis will write a pid file in /var/run/redis.pid when daemonized.
-daemonize no
 
 # If you run Redis from upstart or systemd, Redis can interact with your
 # supervision tree. Options:
@@ -156,7 +153,7 @@ loglevel notice
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile /data/log/redis/redis.log
+logfile /var/log/redis/redis.log
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
@@ -226,7 +223,7 @@ stop-writes-on-bgsave-error yes
 # For default that's set to 'yes' as it's almost always a win.
 # If you want to save some CPU in the saving child set it to 'no' but
 # the dataset will likely be bigger if you have compressible values or keys.
-rdbcompression {{REDIS_RDB_COMPRESSION}}
+rdbcompression yes
 
 # Since version 5 of RDB a CRC64 checksum is placed at the end of the file.
 # This makes the format more resistant to corruption but there is a performance
@@ -248,7 +245,7 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir /data/db
+dir /var/lib/redis
 
 ################################# REPLICATION #################################
 
@@ -524,7 +521,7 @@ replica-priority 100
 # Once the limit is reached Redis will close all the new connections sending
 # an error 'max number of clients reached'.
 #
-maxclients {{REDIS_MAX_CLIENTS}}
+# maxclients 10000
 
 ############################## MEMORY MANAGEMENT ################################
 
@@ -1121,8 +1118,9 @@ hll-sparse-max-bytes 3000
 # zero, the limit is ignored, so for instance it is possible to set just a
 # max entires limit by setting max-bytes to 0 and max-entries to the desired
 # value.
-stream-node-max-bytes {{REDIS_STREAM_NODE_MAX_BYTES}}
-stream-node-max-entries {{REDIS_STREAM_NODE_MAX_ENTRIES}}
+stream-node-max-bytes 4096
+stream-node-max-entries 100
+
 # Active rehashing uses 1 millisecond every 100 milliseconds of CPU time in
 # order to help rehashing the main Redis hash table (the one mapping top-level
 # keys to values). The hash table implementation Redis uses (see dict.c)
