--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -1,20 +1,19 @@
 version: "3.7"
-# Set -arch=_aarch64 for arm build
+
 services:
   redis:
     build:
       context: .
       args:
-#        - arch=_aarch64
-        - version=5.0.5
+        - version=5.0.7
         - build=dev
-    image: leadstec/redis:5.0.5
+    image: leadstec/redis:5.0.7
     ports:
       - "50231:6379"
     volumes:
-      - ~/volumes-data/redis.local/log:/data/log
-      - ~/volumes-data/redis.local/db:/data/db
-      - ~/volumes-data/redis.local/persist:/data/persist
+      - ~/volumes/redis.local/log:/data/log
+      - ~/volumes/redis.local/db:/data/db
+      - ~/volumes/redis.local/persist:/data/persist
     env_file:
       - ./env
     environment:
