--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -1,13 +1,14 @@
-version: "3.7"
+version: "3.8"
 
 services:
   redis:
     build:
       context: .
       args:
-        - version=5.0.7
+        - arch=
+        - version=5.0.9
         - build=dev
-    image: leadstec/redis:5.0.7
+    image: leadstec.tencentcloudcr.com/leadstec/redis:5.0.9
     ports:
       - "50231:6379"
     volumes:
