--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -4,7 +4,7 @@ services:
   redis:
     build:
       context: .
-    image: leadstec/redis:5.0.9
+    image: leadstec/redis:latest
     ports:
       - "50231:6379"
     volumes:
@@ -14,7 +14,6 @@ services:
     env_file:
       - ./env
     environment:
-      - EMAIL=
       - LCS_LOG_LEVEL=debug
     secrets:
       - lcs
